--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -451,11 +451,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "754598ca",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory package is created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create new directory\n",
+    "import os\n",
+    "new_directory = \"package\"\n",
+    "os.mkdir(new_directory)\n",
+    "print(f\"Directory {new_directory} is created\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "50986328",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python.ipynb', 'destination.txt', 'example.bin', 'example.txt', 'Recommeder_system.ipynb', 'Data', 'package', 'ETH_1h.csv', 'example2.txt', 'iris.csv', 'notebook.ipynb', 'logistic_regression.ipynb', 'classification.ipynb', 'clustering.ipynb', 'decision_tree.ipynb', 'example.csv', 'titanic.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# listing Files and directories\n",
+    "items = os.listdir('.')\n",
+    "print(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "443f7396",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Joining paths"
+   ]
   }
  ],
  "metadata": {
