--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -493,13 +493,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "443f7396",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/wanyua/Dev/ML/Python-Machine-Learning-Tutorial/Python_for_data_science/new_folder/file.txt\n"
+     ]
+    }
+   ],
    "source": [
-    "# Joining paths"
+    "# Joining paths\n",
+    "dir_name = \"new_folder\"\n",
+    "file_name = \"file.txt\"\n",
+    "full_path = os.path.join(os.getcwd(),dir_name, file_name)\n",
+    "print(full_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "104d3910",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
