--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -515,8 +515,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "104d3910",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The path example3.txt does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = 'example3.txt'\n",
+    "if os.path.exists(path):\n",
+    "    print(f\"The path {path} exists\")\n",
+    "else:\n",
+    "    print(f\"The path {path} does not exist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b8a71236",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The path example.txt is a file\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking if a path is file or directory\n",
+    "import os\n",
+    "path = 'example.txt'\n",
+    "if os.path.isfile(path):\n",
+    "    print(f\"The path {path} is a file\")\n",
+    "elif os.path.isdir(path):\n",
+    "    print(f\"The path {path} is a directory\")\n",
+    "else:\n",
+    "    print(f\"The path {path} is neither a file nor a directory\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "317c06ad",
    "metadata": {},
    "outputs": [],
    "source": []
