--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -563,8 +563,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "317c06ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/wanyua/Dev/ML/Python-Machine-Learning-Tutorial/Python_for_data_science/example.bin\n"
+     ]
+    }
+   ],
+   "source": [
+    "# getting the absolute path\n",
+    "relative_path = 'example.bin'\n",
+    "absolute_path = os.path.abspath(relative_path)\n",
+    "print(absolute_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8ec8fce",
    "metadata": {},
    "outputs": [],
    "source": []
