--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -584,8 +584,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "c8ec8fce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u0000\u0001\u0002\u0003\u0004\n",
+      "File closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exceptions handling\n",
+    "try:\n",
+    "    file= open('example.bin', 'r')\n",
+    "    content = file.read()\n",
+    "    print(content)\n",
+    "except FileNotFoundError:\n",
+    "    print(\"The file does not exist\")\n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "finally:\n",
+    "    if 'file' in locals() and not file.closed:\n",
+    "        file.close()\n",
+    "        print('File closed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f74ff56a",
    "metadata": {},
    "outputs": [],
    "source": []
