--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f74ff56a",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
     "!pip install numpy\n",
     "import numpy as np\n",
     "arr = np.array([[1,2,3], [3,4,5], [5,4,6]])\n",
-    "print(arr)"
+    "print(arr)\n"
    ]
   },
   {
@@ -706,8 +706,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "10151930",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6]\n",
+      "Mean: 4.5, Standard deviation : 2.29128784747792\n",
+      "Normalized data: [-1.52752523 -1.09108945 -0.65465367 -0.21821789  0.21821789  0.65465367\n",
+      "  1.09108945  1.52752523]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# standardization and normalization\n",
+    "data = np.array([1,2,3,4,5,6,7,8])\n",
+    "print(data[(data > 4) & (data<7)])\n",
+    "# mean and standard deviation \n",
+    "# standard deviation -> tells you how much the values vary from the average\n",
+    "mean = np.mean(data)\n",
+    "standard_deviation = np.std(data) # standardization -> mean = 0, standardard deviation = 1\n",
+    "print(f\"Mean: {mean}, Standard deviation : {standard_deviation}\")\n",
+    "\n",
+    "\n",
+    "# normalize the data -> rescales values so they lie between 0 and 1\n",
+    "norm_data = (data - mean)/ standard_deviation\n",
+    "print(f\"Normalized data: {norm_data}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd8c8946",
    "metadata": {},
    "outputs": [],
    "source": []
