--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -739,11 +739,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "fd8c8946",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Using cached pandas-2.0.3-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.4 MB)\n",
+      "Collecting pytz>=2020.1\n",
+      "  Downloading pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
+      "\u001b[K     |████████████████████████████████| 509 kB 365 kB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.20.3; python_version < \"3.10\" in /home/wanyua/Dev/ML/Python-Machine-Learning-Tutorial/env/lib/python3.8/site-packages (from pandas) (1.24.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/wanyua/Dev/ML/Python-Machine-Learning-Tutorial/env/lib/python3.8/site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting tzdata>=2022.1\n",
+      "  Downloading tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
+      "\u001b[K     |████████████████████████████████| 347 kB 144 kB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.5 in /home/wanyua/Dev/ML/Python-Machine-Learning-Tutorial/env/lib/python3.8/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.0.3 pytz-2025.2 tzdata-2025.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pandas -dataframes and series\n",
+    "!pip install pandas\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c1b2bb5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    2\n",
+       "2    3\n",
+       "3    4\n",
+       "4    5\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# series - one dimension array like object. Similar like a column in a table\n",
+    "data = [1,2,3,4,5]\n",
+    "series = pd.Series(data)\n",
+    "series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "5cede446",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    1\n",
+       "b    2\n",
+       "c    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a series from a dictionary\n",
+    "data = {'a': 1, 'b': 2, 'c': 3}\n",
+    "series_dict = pd.Series(data)\n",
+    "series_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e142bbd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    1.0\n",
+       "b    2.0\n",
+       "c    3.0\n",
+       "d    NaN\n",
+       "e    NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = [1,2,3,4.3,5.3]\n",
+    "ind = ['a', 'b', 'c', 'd', 'e']\n",
+    "pd.Series(data, index = ind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b15917d",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Data frame - similar to a table or a multidimensional array\n"
+   ]
   }
  ],
  "metadata": {
