--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -855,13 +855,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "5b15917d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Name  Age        City\n",
+      "0    Sam   23  New Mexico\n",
+      "1   Vule   23     Nairobi\n",
+      "2  Chels   45    Pretoria\n",
+      "3    Ros   43       Cairo\n",
+      "[['Sam' 23 'New Mexico']\n",
+      " ['Vule' 23 'Nairobi']\n",
+      " ['Chels' 45 'Pretoria']\n",
+      " ['Ros' 43 'Cairo']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Data frame - similar to a table or a multidimensional array\n"
+    "# Data frame - similar to a table or a multidimensional array\n",
+    "# creating a df from a dictionary\n",
+    "data = {\n",
+    "    'Name': ['Sam', 'Vule', 'Chels', 'Ros'],\n",
+    "    'Age': [23,23,45,43],\n",
+    "    'City': [\"New Mexico\", 'Nairobi', \"Pretoria\", \"Cairo\"]\n",
+    "}\n",
+    "\n",
+    "print(pd.DataFrame(data))\n",
+    "print(np.array(pd.DataFrame(data)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "832aeb05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  name  age        city\n",
+      "0  Sam   25  new jersey\n",
+      "1  Sam   25  new jersey\n",
+      "2  Sam   25  new jersey\n",
+      "3  Sam   25  new jersey\n",
+      "4  Sam   25  new jersey\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating a df from a list of dictionary\n",
+    "data = [\n",
+    "    {'name': 'Sam', 'age': 25, 'city': 'new jersey'},\n",
+    "    {'name': 'Sam', 'age': 25, 'city': 'new jersey'},\n",
+    "    {'name': 'Sam', 'age': 25, 'city': 'new jersey'},\n",
+    "    {'name': 'Sam', 'age': 25, 'city': 'new jersey'},\n",
+    "    {'name': 'Sam', 'age': 25, 'city': 'new jersey'},\n",
+    "]\n",
+    "\n",
+    "print(pd.DataFrame(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea090325",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
