--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -922,8 +922,312 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "ea090325",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting kagglehub\n",
+      "\u001b[33m  WARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<urllib3.connection.VerifiedHTTPSConnection object at 0x7f6d3e3d2760>: Failed to establish a new connection: [Errno -3] Temporary failure in name resolution')': /packages/5c/e7/71927b088047132317c14eb513d69c8375ddba3c9029d4154a054f6c8765/kagglehub-0.2.9-py3-none-any.whl\u001b[0m\n",
+      "  Downloading kagglehub-0.2.9-py3-none-any.whl (39 kB)\n",
+      "Collecting tqdm\n",
+      "  Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "\u001b[K     |████████████████████████████████| 78 kB 412 kB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting requests\n",
+      "  Downloading requests-2.32.3-py3-none-any.whl (64 kB)\n",
+      "\u001b[K     |████████████████████████████████| 64 kB 304 kB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: packaging in /home/wanyua/Dev/ML/Python-Machine-Learning-Tutorial/env/lib/python3.8/site-packages (from kagglehub) (25.0)\n",
+      "Collecting charset-normalizer<4,>=2\n",
+      "  Downloading charset_normalizer-3.4.2-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (147 kB)\n",
+      "\u001b[K     |████████████████████████████████| 147 kB 262 kB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting idna<4,>=2.5\n",
+      "  Downloading idna-3.10-py3-none-any.whl (70 kB)\n",
+      "\u001b[K     |████████████████████████████████| 70 kB 157 kB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting urllib3<3,>=1.21.1\n",
+      "  Downloading urllib3-2.2.3-py3-none-any.whl (126 kB)\n",
+      "\u001b[K     |████████████████████████████████| 126 kB 147 kB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting certifi>=2017.4.17\n",
+      "  Downloading certifi-2025.4.26-py3-none-any.whl (159 kB)\n",
+      "\u001b[K     |████████████████████████████████| 159 kB 202 kB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: tqdm, charset-normalizer, idna, urllib3, certifi, requests, kagglehub\n",
+      "Successfully installed certifi-2025.4.26 charset-normalizer-3.4.2 idna-3.10 kagglehub-0.2.9 requests-2.32.3 tqdm-4.67.1 urllib3-2.2.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wanyua/Dev/ML/Python-Machine-Learning-Tutorial/env/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated `kagglehub` version, please consider updating (latest version: 0.3.12)\n",
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/ivankmk/thousand-ml-jobs-in-usa?dataset_version_number=1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1.60M/1.60M [00:02<00:00, 794kB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting model files...\n",
+      "Path to dataset files: /home/wanyua/.cache/kagglehub/datasets/ivankmk/thousand-ml-jobs-in-usa/versions/1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install kagglehub\n",
+    "import kagglehub\n",
+    "\n",
+    "# Download latest version\n",
+    "path = kagglehub.dataset_download(\"ivankmk/thousand-ml-jobs-in-usa\")\n",
+    "\n",
+    "print(\"Path to dataset files:\", path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "538b7d26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>job_posted_date</th>\n",
+       "      <th>company_address_locality</th>\n",
+       "      <th>company_address_region</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>company_website</th>\n",
+       "      <th>company_description</th>\n",
+       "      <th>job_description_text</th>\n",
+       "      <th>seniority_level</th>\n",
+       "      <th>job_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-10-31</td>\n",
+       "      <td>Indianapolis</td>\n",
+       "      <td>Indiana</td>\n",
+       "      <td>Upper Hand</td>\n",
+       "      <td>https://upperhand.com</td>\n",
+       "      <td>Upper Hand is the leading provider of full-sui...</td>\n",
+       "      <td>OverviewUpper Hand is embarking on an exciting...</td>\n",
+       "      <td>Internship</td>\n",
+       "      <td>Internship - Machine Learning Engineer &amp; Data ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2025-03-14</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Ikigai</td>\n",
+       "      <td>https://www.ikigailabs.io</td>\n",
+       "      <td>Built upon years of MIT research, Ikigai is a ...</td>\n",
+       "      <td>Company DescriptionThe Ikigai platform unlocks...</td>\n",
+       "      <td>Mid-Senior level</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2025-04-09</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Adobe</td>\n",
+       "      <td>http://www.adobe.com</td>\n",
+       "      <td>Adobe is the global leader in digital media an...</td>\n",
+       "      <td>Our CompanyChanging the world through digital ...</td>\n",
+       "      <td>Entry level</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2025-03-22</td>\n",
+       "      <td>Mountain View</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Waymo</td>\n",
+       "      <td>https://waymo.com/careers/</td>\n",
+       "      <td>On the journey to be the world's most trusted ...</td>\n",
+       "      <td>Waymo is an autonomous driving technology comp...</td>\n",
+       "      <td>Entry level</td>\n",
+       "      <td>Machine Learning Engineer, Training</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2025-03-28</td>\n",
+       "      <td>Boston</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>HMH</td>\n",
+       "      <td>http://www.hmhco.com</td>\n",
+       "      <td>We are an adaptive learning company that empow...</td>\n",
+       "      <td>Job Title: Machine Learning EngineerLocation: ...</td>\n",
+       "      <td>Mid-Senior level</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0 job_posted_date company_address_locality company_address_region  \\\n",
+       "0           0      2024-10-31             Indianapolis                Indiana   \n",
+       "1           1      2025-03-14            San Francisco             California   \n",
+       "2           2      2025-04-09                 San Jose                     CA   \n",
+       "3           3      2025-03-22            Mountain View             California   \n",
+       "4           4      2025-03-28                   Boston          Massachusetts   \n",
+       "\n",
+       "  company_name             company_website  \\\n",
+       "0   Upper Hand       https://upperhand.com   \n",
+       "1       Ikigai   https://www.ikigailabs.io   \n",
+       "2        Adobe        http://www.adobe.com   \n",
+       "3        Waymo  https://waymo.com/careers/   \n",
+       "4          HMH        http://www.hmhco.com   \n",
+       "\n",
+       "                                 company_description  \\\n",
+       "0  Upper Hand is the leading provider of full-sui...   \n",
+       "1  Built upon years of MIT research, Ikigai is a ...   \n",
+       "2  Adobe is the global leader in digital media an...   \n",
+       "3  On the journey to be the world's most trusted ...   \n",
+       "4  We are an adaptive learning company that empow...   \n",
+       "\n",
+       "                                job_description_text   seniority_level  \\\n",
+       "0  OverviewUpper Hand is embarking on an exciting...        Internship   \n",
+       "1  Company DescriptionThe Ikigai platform unlocks...  Mid-Senior level   \n",
+       "2  Our CompanyChanging the world through digital ...       Entry level   \n",
+       "3  Waymo is an autonomous driving technology comp...       Entry level   \n",
+       "4  Job Title: Machine Learning EngineerLocation: ...  Mid-Senior level   \n",
+       "\n",
+       "                                           job_title  \n",
+       "0  Internship - Machine Learning Engineer & Data ...  \n",
+       "1                          Machine Learning Engineer  \n",
+       "2                          Machine Learning Engineer  \n",
+       "3                Machine Learning Engineer, Training  \n",
+       "4                          Machine Learning Engineer  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('1000_ml_jobs_us.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e9cc3a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                                                                  2\n",
+       "job_posted_date                                                    2025-04-09\n",
+       "company_address_locality                                             San Jose\n",
+       "company_address_region                                                     CA\n",
+       "company_name                                                            Adobe\n",
+       "company_website                                          http://www.adobe.com\n",
+       "company_description         Adobe is the global leader in digital media an...\n",
+       "job_description_text        Our CompanyChanging the world through digital ...\n",
+       "seniority_level                                                   Entry level\n",
+       "job_title                                           Machine Learning Engineer\n",
+       "Name: 2, dtype: object"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[2] # this is a row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cd9714b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            Indiana\n",
+       "1         California\n",
+       "2                 CA\n",
+       "3         California\n",
+       "4      Massachusetts\n",
+       "           ...      \n",
+       "992               CA\n",
+       "993            Texas\n",
+       "994               NY\n",
+       "995               CA\n",
+       "996    Massachusetts\n",
+       "Name: company_address_region, Length: 997, dtype: object"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0:,3] # column 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468d4a35",
    "metadata": {},
    "outputs": [],
    "source": []
