--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -1226,8 +1226,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "468d4a35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['job_posted_date', 'company_address_locality', 'company_address_region',\n",
+       "       'company_name', 'company_website', 'company_description',\n",
+       "       'job_description_text', 'seniority_level', 'job_title'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove a column\n",
+    "df.drop('Unnamed: 0', axis=1, inplace = True)\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2584ad6",
    "metadata": {},
    "outputs": [],
    "source": []
